[project]
name = "pab-pokerbots"
version = "0.1.0"
description = "Poker at Berkeley PokerBots Competition Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0", 
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "docker>=6.1.3",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6"
]
